--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/jquery": "^3.5.4",
     "clean-webpack-plugin": "^3.0.0",
     "html-webpack-plugin": "^4.5.0",
     "ts-loader": "^8.0.11",
@@ -21,5 +22,9 @@
     "webpack-cli": "^4.2.0",
     "webpack-dev-server": "^3.11.0",
     "webpack-merge": "^5.4.0"
+  },
+  "dependencies": {
+    "jquery": "^3.5.1",
+    "moment": "^2.29.1"
   }
 }
