--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "license": "ISC",
   "devDependencies": {
     "@types/jquery": "^3.5.4",
+    "awesome-typescript-loader": "^5.2.1",
     "clean-webpack-plugin": "^3.0.0",
+    "fork-ts-checker-webpack-plugin": "^6.0.3",
     "html-webpack-plugin": "^4.5.0",
     "ts-loader": "^8.0.11",
     "typescript": "^4.0.5",
