--- a/package.json
+++ b/package.json
@@ -7,17 +7,25 @@
     "start": "webpack serve --env=development --config ./build/webpack.config.js --port=3030",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "rm -rf ./publish && webpack --env=production --config ./build/webpack.config.js",
-    "watch": "tsc -w --outDir ./dest"
+    "watch": "tsc -w --outDir ./dest",
+    "lint": "eslint src/index.ts --ext .js,.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/jest": "^26.0.15",
     "@types/jquery": "^3.5.4",
+    "@types/source-map": "^0.5.7",
+    "@typescript-eslint/eslint-plugin": "^4.8.2",
+    "@typescript-eslint/parser": "^4.8.2",
     "awesome-typescript-loader": "^5.2.1",
     "clean-webpack-plugin": "^3.0.0",
+    "eslint": "^7.14.0",
     "fork-ts-checker-webpack-plugin": "^6.0.3",
     "html-webpack-plugin": "^4.5.0",
+    "jest": "^26.6.3",
+    "ts-jest": "^26.4.4",
     "ts-loader": "^8.0.11",
     "typescript": "^4.0.5",
     "webpack": "^5.5.1",
